unpackaged/main/default/objects/hed__Relationship__c/fields/Extract_StudentAdvisorRelationship__c.field-meta.xml
<CustomField>
    <fullName>Extract_StudentAdvisorRelationship__c</fullName>
    <description>Field for MDC Data Upload Mapping.</description>
    <externalId>true</externalId>
    <label>Extract_StudentAdvisorRelationship</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>