unpackaged/main/default/objects/hed__Relationship__c/fields/hed__Relationship_Explanation__c.field-meta.xml
<CustomField>
    <fullName>hed__Relationship_Explanation__c</fullName>
    <description>Text formula that constructs a sentence explaining the relationship between the two Contacts</description>
    <formula>TEXT(hed__RelatedContact__r.Salutation) + &quot; &quot; + hed__RelatedContact__r.FirstName + &quot; &quot; + hed__RelatedContact__r.LastName
+ &quot;  &quot;  +  $Label.hed__Relationship_Explanation_Connector + &quot; &quot; +
TEXT(hed__Contact__r.Salutation) + &quot; &quot; + hed__Contact__r.FirstName + &quot; &quot; + hed__Contact__r.LastName + &quot;&#39;s &quot; + TEXT(hed__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A sentence that clarifies who&#39;s who in the Relationship. For example, &quot;&#39;s &quot; Joe Ada is Sara Cordova&#39;s employer.&quot;&#39;s &quot; This field is read-only.</inlineHelpText>
    <label>Relationship Explanation</label>
    <type>Text</type>
</CustomField>