unpackaged/main/default/objects/hed__Relationship__c/fields/hed__Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Type__c</fullName>
    <description>Describes how the Related Contact is connected to the Contact, for example, friend, coworker, aunt, etc.</description>
    <inlineHelpText>Describes how the Related Contact is connected to the Contact, for example, friend, coworker, aunt, etc.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADVR</fullName>
                <label>Academic Advisor</label>
            </value>
            <value>
                <fullName>Advisee (ADVR)</fullName>
            </value>
            <value>
                <fullName>Advisee (SCSS)</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Coworker</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Foster Child</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Parent&#39;s Sibling</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Sibling&#39;s Child</fullName>
            </value>
            <value>
                <fullName>Spouse/Partner</fullName>
            </value>
            <value>
                <fullName>Stepchild</fullName>
            </value>
            <value>
                <fullName>Stepparent</fullName>
            </value>
            <value>
                <fullName>SCSS</fullName>
                <label>Student Success Advisor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>