unpackaged/main/default/objects/hed__Relationship__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>hed__Status__c</columns>
    <columns>hed__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>